--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,20 +1,95 @@
 * {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
-
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
-  color: #212121;
-  line-height: 1.5;
+  font-family: 'Roboto', sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-#search-box {
-  font: inherit;
-  padding: 8px;
-  max-width: 320px;
-  margin-bottom: 16px;
+.header {
+  height: 50px;
+  width: 100%;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  background-color: #3f57b3;
+}
+.search-form {
+  width: 300px;
+  height: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.search-form__input {
+  width: 85%;
+  height: 100%;
+  border-radius: 5px 0 0 5px;
+  border: none;
+  padding-left: 15px;
+}
+.search-form__input:focus {
+  outline: none;
+  border: 2px solid #000;
+}
+
+.search-form__button {
+  width: 15%;
+  height: 100%;
+  background-color: f0f0f0;
+  border-radius: 0 5px 5px 0;
+  border: none;
+}
+.search-form__button:hover {
+  border: 2px solid #000;
+  cursor: pointer;
+}
+.search-form__button--icon {
+  width: 24px;
+  height: 20px;
+}
+
+.gallery {
+  margin-inline: auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  padding: 20px;
+}
+.photo-card {
+  width: 100%;
+  height: 280px;
+  box-shadow: 0px 2px 3px 0px rgba(66, 68, 90, 1);
+  border-radius: 0 0 5px 5px;
+}
+img {
+  object-fit: cover;
+  width: 100%;
+  height: 80%;
+}
+.info {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+
+  padding-inline: 20px;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  border-radius: 5px 5px 0 0;
+}
+
+.info-item {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
